Revision history for C and Perl extension of nfdump.

1.15 2015-08-xx
	- c: improved merge_threads (removed deadlock)
	- c: new function lnf_mem_lookup_c and lnf_mem_lookup_raw_c
	- c: new example examples/lnf_ex09_memlookup.c 

1.14 2015-07-18
	- c: new way to work with data in lnf_mem, new functions 
	  lnf_mem_first_c, lnf_mem_next_c, lnf_mem_read_c,
	  lnf_mem_read_raw_c
	- c: functions lnf_mem_read, lnf_mem_read_raw,
	  lnf_mem_read_reset marked as deprecated
	- c: examples redesigned to use new lnf_mem functions 
	- c: libnf.h was not installed by default (thanks to Tomas Cejka)
	- c: removed memory release bug in merge_threads
	- perl: added new test 52-libnf-examples.t to test examples 
	- perl: t/08-aggreg-sort.t was missing in distribution package 
	- perl: Socket6 module is not required starting with perl 5.14.0 
	  http://search.cpan.org/~jesse/perl-5.14.0/pod/perldelta.pod#Improved_IPv6_support
	- perl: buggy implementation of inet_pton in Ubuntu 

1.13 2015-07-08
	- perl: module requires use of threads 
	- perl: tests that depends on threads are executed only on 
	  systems where thread support is enabled

1.12 2015-07-05
	- c: removed __thread directive from source codes 
	- c: redesign of thread patch support nfdump-thread.patch and
	  nfdump-leak.patch patch merged into one file

1.11 2015-07-04
	- nfdumpp: added basic comparsion test for threads
	- perl: removed some issues with thread support in perl 

1.10 2015-06-30
	- Project entered into close cooperation with 
	  CESNET - Czech Nationl Research Network
	- c: thread support enabled by default (--enable-threads)
	- c: aggregation unit supports statistics 
	- c: new pair fields LNF_FLD_PAIR_PORT|ADDR|AS|IF|VLAN
	- c: examples/lnf_ex08_statistics added 
	- perl: Net::NfDump->info returns propper data 
	- perl: invalid handling of LNF_UINT16 (Bug #105472)
	- perl: nfasnupd do not require Geo::IP module

1.09 2015-05-28
	- perl: removed memory leak (Bug #104294)
	- perl: improved test 
